# wasm_cmaes

./: .gitignore  .ubsignore  CHANGELOG.md  Cargo.toml  ENHANCEMENTS.md  LICENSE-MIT  README.md  WORKING-STATUS.md  cmaes_runner.ts  index.d.ts  index.html  manifest.json  package-lock.json  package.json  sw.js  temp_app_snippet.js
.cargo/: config.toml
.github/workflows/: ci.yml  playwright.config.cjs  playwright.config.js
.github/workflows/tests/: smoke.spec.cjs  smoke.spec.js
examples/: app.js  enhanced-app.js  simple-parallel.html  simple-sequential.html  tailwind.css  viz-benchmarks-classic.html  viz-benchmarks-enhanced.html  viz-benchmarks-working.html  viz-benchmarks.html
examples/tests/: node-smoke.test.mjs
pkg/: README.md  cmaes_wasm.d.ts  cmaes_wasm.js  cmaes_wasm_bg.js  cmaes_wasm_bg.wasm  cmaes_wasm_bg.wasm.d.ts  package.json
pkg-par/: LICENSE-APACHE  cmaes_wasm.d.ts  cmaes_wasm.js  cmaes_wasm_bg.js  cmaes_wasm_bg.wasm  cmaes_wasm_bg.wasm.d.ts  package.json
scripts/: build-all.sh  deploy.sh
src/: lib.rs
tests/: wasm.rs
tests/e2e/: playwright.config.ts  viz.spec.ts
