[package]
name = "cmaes_wasm"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []
parallel = ["rayon"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
rayon = { version = "1.8", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
